@@ -1360,7 +1360,7 @@ public class EDIF extends Topology
 	/**
 	 * Method to adjust a network name to be safe for EDIF output.
 	 */
-	protected String getSafeNetName(String name) { return name; }
+	protected String getSafeNetName(String name, boolean bus) { return name; }
 
 	/**
 	 * Method to obtain Netlist information for a cell.
