@@ -272,7 +272,7 @@ public class MOSSIM extends Topology
 	/**
 	 * Method to adjust a network name to be safe for MOSSIM output.
 	 */
-	protected String getSafeNetName(String name) { return name; }
+	protected String getSafeNetName(String name, boolean bus) { return name; }
 
 	/**
 	 * Method to obtain Netlist information for a cell.
