@@ -834,7 +834,7 @@ public class Tegas extends Topology
 	/**
 	 * Method to adjust a network name to be safe for Tegas output.
 	 */
-	protected String getSafeNetName(String name) { return name; }
+	protected String getSafeNetName(String name, boolean bus) { return name; }
 
 	/**
 	 * Method to obtain Netlist information for a cell.
