@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.02g: *********************************
 
+BUG: (02/02/05, SMR) Verilog output writes indexed signal names wrong (Bug #189).
+FIX: In Verilog.getSafeNetName() distinguish busses from plain signals and handle them properly.
+
 ************************* Version 8.02f: *********************************
 
 BUG: (02/02/05, SMR) Verilog output writes indexed signal names wrong (Bug #188).
